force-app/main/default/objects/Case/fields/IsVIP__c.field-meta.xml
<CustomField>
    <fullName>IsVIP__c</fullName>
    <description>A case is VIP if Account is VIP</description>
    <formula>Account.IsVIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>