force-app/main/default/objects/Case/fields/ReturnTrue__c.field-meta.xml
<CustomField>
    <fullName>ReturnTrue__c</fullName>
    <description>delete me</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>delete me</inlineHelpText>
    <label>ReturnTrue</label>
    <type>Checkbox</type>
</CustomField>