force-app/main/default/objects/Case/fields/TextField__c.field-meta.xml
<CustomField>
    <fullName>TextField__c</fullName>
    <description>Should be detected by gearset</description>
    <inlineHelpText>Should be detected by gearset</inlineHelpText>
    <label>TextField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>