force-app/main/default/objects/Case/validationRules/High_Priority_Requires_VIP.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Requires_VIP</fullName>
    <active>true</active>
    <description>High_Priority_Requires_VIP</description>
    <errorConditionFormula>IsVIP__c == false &amp;&amp; TEXT(Priority)==&apos;High&apos;</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Ony Vips can have High Priority Cases</errorMessage>
</ValidationRule>